Criado a secção area Admin

--- a/AcademiaCorpus/Views/Home/Index.cshtml
+++ b/AcademiaCorpus/Views/Home/Index.cshtml
@@ -117,11 +117,10 @@
 <div class="melhor-versao">
     <h1>Seja a melhor versão de você!</h1>
 </div>
-<div class="video">
 
-
+<div class="video-div">
     <div>
-        <video width="350" controls autoplay muted loop>
+        <video width="400" controls autoplay muted loop>
             <source src="~/imagens/videos/POSTAGEM INSTAGRAN AGOSTO 22.mp4" type="video/mp4">
         </video>
     </div>
