--- a/AcademiaCorpus/Views/Shared/_Layout.cshtml
+++ b/AcademiaCorpus/Views/Shared/_Layout.cshtml
@@ -36,6 +36,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-white @(ViewBag.OpcaoMenu == 3 ? "active" : "")" asp-area="" asp-controller="Home" asp-action="FaleConosco">Fale Conosco</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white @(ViewBag.OpcaoMenu == 4 ? "active" : "")" asp-area="Admin" asp-controller="Admin" asp-action="Index">Admin</a>
+                        </li>
                     </ul>
 
                 </div>
