--- a/AcademiaCorpus/Views/Shared/_Layout.cshtml
+++ b/AcademiaCorpus/Views/Shared/_Layout.cshtml
@@ -34,16 +34,24 @@
                             <a class="nav-link text-white @(ViewBag.OpcaoMenu == 2 ? "active" : "")" asp-area="" asp-controller="Home" asp-action="Planos">PLANOS</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-white @(ViewBag.OpcaoMenu == 3 ? "active" : "")" asp-area="" asp-controller="Home" asp-action="FaleConosco">Fale Conosco</a>
+                            <a class="nav-link text-white @(ViewBag.OpcaoMenu == 3 ? "active" : "")" asp-area="" asp-controller="Home" asp-action="FaleConosco">FALE CONOSCO</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-white @(ViewBag.OpcaoMenu == 4 ? "active" : "")" asp-area="Admin" asp-controller="Admin" asp-action="Index">Admin</a>
+                            <a class="nav-link text-white @(ViewBag.OpcaoMenu == 4 ? "active" : "")" asp-area="Admin" asp-controller="Admin" asp-action="Index">ADMIN</a>
                         </li>
+
+                        <li class="nav-item">
+
+                            @await Html.PartialAsync("_LoginPartial")
+
+                        </li>
+
                     </ul>
 
                 </div>
 
             </div>
+
         </nav>
     </header>
 
