--- a/AcademiaCorpus/Areas/Aluno/Views/Aluno/Index.cshtml
+++ b/AcademiaCorpus/Areas/Aluno/Views/Aluno/Index.cshtml
@@ -1,9 +1,11 @@
-﻿<br />
-<div class="container">
-    <div class="jumbotron">
-        <p>
-            <h2>Esta é a área do Aluno</h2>
-        </p>
+﻿<div class="loginContainer">
+    <br />
+    <div class="container">
+        <div class="jumbotron">
+            <p>
+                <h2>Esta é a área do Aluno</h2>
+            </p>
+        </div>
+        <a asp-area="" asp-controller="Home" asp-action="Index">Volta a Home Page</a>
     </div>
-    <a asp-area="" asp-controller="Home" asp-action="Index">Volta a Home Page</a>
 </div>
