--- a/AcademiaCorpus/Views/Account/AccessDenied.cshtml
+++ b/AcademiaCorpus/Views/Account/AccessDenied.cshtml
@@ -8,5 +8,6 @@
             </p>
         </div>
         <a asp-area="" asp-controller="Home" asp-action="Index">Volta a Home Page</a>
+        <div class="btn sm"></div>
     </div>
 </div>
